   connected line information update.  See the online option documentation for
   more information.  Defaults to 'no' as setting it to 'yes' can result in
   many unnecessary messages being sent to the caller.

 * The configuration setting 'progressinband' now defaults to 'no', which
   matches the actual behavior of previous versions.

res_pjsip
------------------
 * A new CLI command has been added: "pjsip show settings", which shows
   both the global and system configuration settings.

 * A new global option has been added: "max_initial_qualify_time", which
   sets the maximum amount of time from startup that qualifies should be
   attempted on all contacts.

* A new aor option has been added: "qualify_timeout", which sets the timeout
   in seconds for a qualify.  The default is 3 seconds.  This overrides the
   hard coded 32 seconds in pjproject.

 * Endpoint status will now change to "Unreachable" when all contacts are
   unavailable.  When any contact becomes available, the endpoint will status
   will change back to "Reachable".

res_ari_channels
------------------
 * Two new events, 'ChannelHold' and 'ChannelUnhold', have been added to the
   events data model. These events are raised when a channel indicates a hold
   or unhold, respectively.

func_holdintercept
------------------
 * A new dialplan function, HOLD_INTERCEPT, has been added. This function, when
   placed on a channel, intercepts hold/unhold indications signalled by the
   channel and prevents them from moving on to other channels in a bridge with
   the hold initiator. Instead, AMI or ARI events are raised indicating that
   the channel wanted to place someone on hold. This allows external
   applications to implement their own custom hold/unhold logic.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.2.0 to Asterisk 13.3.0 ------------
------------------------------------------------------------------------------
